--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Ngue",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/logo.png",
+    "icon": "./src/assets/images/splash-icon.png",
     "scheme": "rentcar",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,9 +14,9 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./src/assets/images/logo.png",
-        "backgroundImage": "./src/assets/images/logo.png",
-        "monochromeImage": "./src/assets/images/logo.png"
+        "foregroundImage": "./src/assets/images/splash-icon.png",
+        "backgroundImage": "./src/assets/images/splash-icon.png",
+        "monochromeImage": "./src/assets/images/splash-icon.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -32,7 +32,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./src/assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
